[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfind"
version = "0.1.0"
description = "Instant, format-agnostic log slicing by time range."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dateutil>=2.8.2",
]

[project.scripts]
tfind = "tfind:main"

[tool.setuptools]
py-modules = ["tfind"]
